// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctlt render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expenses
     expenses totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctlt render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     expenses totalling 
    $235,123,409.87
  </h1>
</div>
`;
